<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
   	style="@style/MainLayout" >

    <ImageView
        android:id="@+id/imgvBarcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/default_image"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/tvLblProductCode"
        android:contentDescription="@string/barcode"
         />

    <TextView
        android:id="@+id/tvLblProductCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvProductCode"
        android:layout_centerHorizontal="true"
        android:text="@string/product_code" />

    <TextView
        android:id="@+id/tvProductCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ProductValue"
        android:layout_above="@+id/tvLblProductName"
        android:layout_centerHorizontal="true"
        android:text="@string/short_notAvailable" />

    <TextView
        android:id="@+id/tvLblProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/product_name" />

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ProductValue"
        android:layout_below="@+id/tvLblProductName"
        android:layout_centerHorizontal="true"
        android:text="@string/short_notAvailable" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

         <Button
        android:id="@+id/btnBack"    
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"    
        android:onClick="onClickBack"
        android:text="@string/back" />
         
         <Button
        android:id="@+id/btnPrint"    
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"    
        android:text="@string/print" />
        
        
    </LinearLayout>
</RelativeLayout>