<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.unibe.android.stickerGenerator.MainActivity"
    style="@style/MainLayout"
    android:background="@color/white">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView"
        android:scaleType="centerInside"
        android:background="@drawable/bgs" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal">

        <EditText
            android:id="@+id/etProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/product_name"
            android:background="@drawable/t_top"
            android:padding="15dp"
            android:textSize="24sp"
            android:autoText="false"
            android:elegantTextHeight="true" />

        <EditText
            android:id="@+id/etProductCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/etProductName"
            android:layout_alignLeft="@+id/etProductName"
            android:layout_alignStart="@+id/etProductName"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/product_code"
            android:inputType="number"
            android:padding="15dp"
            android:background="@drawable/t_bottom"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnGenerate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etProductName"
            android:layout_alignRight="@+id/etProductName"
            android:layout_below="@+id/etProductName"
            android:layout_marginTop="18dp"
            android:onClick="onClickGenerate"
            android:text="@string/generate" />

    </LinearLayout>

</FrameLayout>
