<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.unibe.android.stickerGenerator.AboutActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/primary_material_light">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical|center_horizontal"
                android:padding="16dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/textView2"
                        android:text="@string/app_name"
                        android:layout_marginBottom="10dp"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/textViewVersion"
                        android:text="@string/version_title"
                        android:layout_marginBottom="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Version"
                        android:id="@+id/version_app"
                        android:layout_marginBottom="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/textView"
                        android:text="About"
                        android:layout_marginBottom="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/descriptionA"
                        android:id="@+id/descriptionAbout" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/textView15"
                        android:text="@string/team"
                        android:layout_marginTop="16dp" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/integrantesContainer"
                        android:gravity="center_vertical"
                        android:layout_marginTop="16dp">


                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="100dp"
                            android:id="@+id/imageView4"
                            android:src="@drawable/fernando_image"
                            android:layout_weight="2" />

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:text="@string/intengrante1"
                                android:id="@+id/textView3" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/linearLayout"
                        android:gravity="center_vertical"
                        android:layout_marginTop="16dp" >

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="100dp"
                            android:id="@+id/imageView5"
                            android:src="@drawable/luis_image"
                            android:layout_weight="2" />

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:text="@string/intengrante2"
                                android:id="@+id/textView5" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/linearLayout2"
                        android:gravity="center_vertical"
                        android:layout_marginTop="16dp" >

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="100dp"
                            android:id="@+id/imageView6"
                            android:src="@drawable/jeffry_image"
                            android:layout_weight="2" />

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:text="@string/intengrante3"
                                android:id="@+id/textView324234" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/linearLayoutasdasdas"
                        android:gravity="center_vertical"
                        android:layout_marginTop="16dp" >

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="100dp"
                            android:id="@+id/imageView234234"
                            android:src="@drawable/lorenzo_image"
                            android:layout_weight="2" />

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:text="@string/integrante7"
                                android:id="@+id/textView7" />

                        </LinearLayout>
                    </LinearLayout>


                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/linearLayout3"
                        android:gravity="center_vertical"
                        android:layout_marginTop="16dp" >

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="100dp"
                            android:id="@+id/imageView7"
                            android:src="@drawable/yasselys_image"
                            android:layout_weight="2" />

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:text="@string/intengrante4"
                                android:id="@+id/textView9" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/linearLayout4"
                        android:gravity="center_vertical"
                        android:layout_marginTop="16dp" >

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="100dp"
                            android:id="@+id/imageView8"
                            android:src="@drawable/allam_image"
                            android:layout_weight="2" />

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:text="@string/intengrante5"
                                android:id="@+id/textView11" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/linearLayout5"
                        android:gravity="center_vertical"
                        android:layout_marginTop="16dp" >

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="100dp"
                            android:id="@+id/imageView9"
                            android:src="@drawable/salvador_image"
                            android:layout_weight="2" />

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:text="@string/intengrante6"
                                android:id="@+id/textView13" />

                        </LinearLayout>
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/textView16"
                        android:text="@string/teacher"
                        android:layout_marginTop="16dp" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/linearLayout6"
                        android:gravity="center_vertical"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp">

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="100dp"
                            android:id="@+id/imageView10"
                            android:src="@drawable/raisa_image"
                            android:layout_weight="2" />

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:text="@string/profesora"
                                android:id="@+id/textView17" />

                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</ScrollView>
